# llvm-jit-ptx

./: .gitignore  Cargo.toml  README.md  build.rs
dfunc/: Cargo.toml
dfunc/src/: lib.rs
dfunc/tests/: check.rs
src/: kernel.ll  kernel_only.ll  kernel_only_d.ll  main.cpp  main.rs
