workspace = { members = ["dfunc"] }

[package]
name = "llvm-jit-ptx"
version = "0.1.0"
edition = "2021"

[features]
enzyme-host = ["dfunc/enzyme"]
enzyme-device = []

[dependencies]
dfunc = { path = "dfunc" } # features = ["enzyme"]

# This uses https://github.com/rust-lang/rfcs/blob/master/text/3176-cargo-multi-dep-artifacts.md
# and https://github.com/rust-lang/cargo/issues/9096, would be viable if
# artifact=llvm-ir (or artifact=llvm-bc) was valid.
#
# dfunc-device = {package = "dfunc", path = "dfunc", target="nvptx64-nvidia-cuda", artifact="staticlib"}

[build-dependencies]
cargo_metadata = "0.18.1"
cc = "1.0.83"

[profile.release]
lto = "fat"

[profile.dev]
lto = "fat"
